Fixed look of step by step nav to fit better on mobile + more layoutfixes

--- a/css/grid.css
+++ b/css/grid.css
@@ -200,11 +200,15 @@ body {
   line-height: 1.0909090909090908em;
 }
 
+h1, h2, h3 {
+  font-weight: normal;
+}
+
 h1, h2 {
   margin: 1.923077em 0 1.2em;
 }
 
-h2 {
+h1, h2, h3 {
   font-weight: normal;
 }
 
@@ -213,13 +217,13 @@ h3 {
 }
 
 p{
-	margin-bottom: 3em;
+	margin-bottom: 2em;
 	line-height: 1.3;
 }
 
 p.message{
   	font-size: 1.3em;
-  	line-height: 1.5;
+  	line-height: 1.5em;
   }	
 /*
 *  Simple elastic gutters
@@ -273,6 +277,11 @@ header{
   	text-align: center;
 }
 
+.logoimg{
+	width: 170px;
+	height: 70px;
+}
+
 .nav-container{
 	width: 70%;
     margin: 3em 0 3em 13.1%;
@@ -300,9 +309,43 @@ h3.tease{
 	margin: 2em 0 2em;
 }
 
+.alternative .text{
+	float: left;
+    width: 15em;
+    padding-top: 0.4em;
+    font-size: 0.9em;
+}
+
 .feedback-container{
 		font-size: 1.8em;
 }
+
+/*---------------*/
+/* STEP-BY-STEP NAV */
+/*--------------*/
+
+/* MOBILE */
+nav.symbols li::before{
+    content: "";
+    background-color: #fff;
+    width: 12px;
+    height: 12px;
+    border-radius: 15px;
+    display: block;
+    margin-top: -6px;
+}
+
+/* MOBILE */
+nav.symbols li div {
+	opacity: 0;
+    background-color: #fff;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    margin: -16px -4px;
+    opacity: 0;
+    border-radius: 30px;
+}   
 
 /*
 *
@@ -376,6 +419,12 @@ h3.tease{
     font-size: 1em;
 /*     background-color: yellow; */
   }
+  
+  .logoimg{
+	width: 258px;
+	height: 105px;
+	}
+	
     
   .alternatives .alternative{
   		font-size: 1.2em;
@@ -383,7 +432,32 @@ h3.tease{
   		
   .alternatives .alternative:last-child{
   		border-bottom: none;
-  }	
+  }
+  
+	/*---------------*/
+	/* STEP-BY-STEP NAV */
+	/*--------------*/
+
+	nav.symbols li::before {
+		content:"";
+	    background-color: #fff;
+		width: 20px;
+		height: 20px;
+	    border-radius: 15px;
+		display: block;
+		margin-top: -11px;
+	}
+    
+	nav.symbols li div {
+	    opacity: 0;
+	    background-color: #fff;
+	    width: 34px;
+	    height: 34px;
+	    position: absolute;
+	    margin: -27px -7px;
+	    opacity: 0;
+	    border-radius: 30px;
+	}	
   
   p.message{
   	font-size: 1.6em;
@@ -397,6 +471,7 @@ h3.tease{
 	h1.massive{
 		font-size: 2.5em;
 		letter-spacing: -1px;
+		line-height: 0.8em;
 	}
 	
 	 .nav-container{	
@@ -443,6 +518,10 @@ h3.tease{
   .btn{
   	margin-top: 1em;
   }
+  
+  .btntease-contain{
+		margin-top: 0;
+	}
   
   .feedback-container{
 		font-size: 2.3em;
@@ -508,6 +587,7 @@ h3.tease{
   
 	  h1.massive{
 			font-size: 3.2em;
+			line-height: 0.8em;
 		}
   
 	  h3.tease{
